<resources>
    <string name="app_name">Mallika Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in neque congue, ullamcorper enim nec, vehicula nibh. Donec libero magna, tincidunt a leo nec, fermentum mollis felis. Fusce volutpat est enim, sed rutrum tortor facilisis vitae. In volutpat bibendum lacus, sit amet placerat dui pharetra a. Vivamus sagittis lorem est, quis suscipit nisi euismod eget. Vestibulum eget ante at dui rutrum ultricies. Aliquam diam ligula, dignissim a semper non, vestibulum at risus. Phasellus odio nibh, rhoncus vitae nisl ac, iaculis tempus quam. Sed id euismod nulla. Nullam luctus tincidunt quam in luctus. Cras vitae ante non purus efficitur efficitur. Morbi vulputate congue nisi, at condimentum arcu sagittis at. Praesent semper mi eget nibh efficitur tempus.

Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque id lobortis leo, id porta neque. Nunc nec vehicula justo. Nulla luctus vel quam et venenatis. Suspendisse et justo eros. Donec semper posuere metus, vel dignissim sapien vestibulum ac. Nulla feugiat diam vitae pretium pharetra. Phasellus suscipit velit nec eros semper, ut sagittis sem sagittis. Donec in auctor ex. Nulla efficitur, ex sed blandit euismod, dui turpis aliquam tortor, mattis dapibus eros mi at leo.

Fusce in iaculis turpis. Integer lectus orci, mollis eu felis et, congue iaculis justo. In varius varius imperdiet. Proin pretium hendrerit ligula, sit amet ullamcorper enim pulvinar sed. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse tristique vestibulum convallis. In quam nunc, dapibus nec diam sollicitudin, vehicula varius nulla. In tempus, ipsum non viverra gravida, sem velit sagittis justo, at bibendum mauris nibh sed neque. Phasellus suscipit enim magna, quis malesuada nunc commodo ac. Duis sodales, dui sit amet dictum iaculis, lorem massa dictum augue, id malesuada massa mauris in nunc. Integer quis egestas mauris. In sollicitudin tellus a ante venenatis sodales ac a est. Sed a diam at justo aliquam semper eu sit amet sem. Pellentesque aliquet id enim non facilisis. Suspendisse enim ante, finibus id commodo quis, vestibulum et nunc.

Vestibulum nec dignissim arcu, in rutrum sapien. Quisque nec posuere turpis, in malesuada nulla. Fusce ac hendrerit orci. Aenean quis lectus ut metus finibus auctor. Aliquam fringilla pulvinar ipsum, et sodales ex sollicitudin ac. Aliquam eget sem ut massa euismod sollicitudin. Vivamus pellentesque elementum diam, ut volutpat justo convallis id. Fusce cursus suscipit ornare. Nunc gravida hendrerit euismod. Duis a orci viverra, consectetur neque at, aliquet magna. Vivamus eget diam vel tellus lacinia cursus in at justo. Nam pharetra metus accumsan est suscipit porttitor.

Morbi vulputate sem nec condimentum eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam at tempus est, ac tincidunt elit. Maecenas mi leo, venenatis a lobortis pellentesque, semper sed diam. Ut a interdum risus, eu semper nisl. Etiam laoreet condimentum ante, quis rhoncus mauris ullamcorper non. Etiam et semper nunc, sed volutpat nisl. Donec lacinia finibus lacus, ac viverra nunc ullamcorper in. Suspendisse pellentesque, metus et tempor rutrum, nunc nunc ultrices tortor, finibus hendrerit nulla quam id turpis. Donec ut lacus justo. Cras venenatis consectetur mauris, ac mattis lectus vehicula eu.</string>

    <string name="back_button_accout">Back button</string>
    <string name="account_label">Account</string>
    <string name="name_account">Nararaya Kirana</string>
    <string name="email_account">nararaya.putri@gmail.com</string>
    <string name="liked_recipe_account">Liked Recipe</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="help_and_support">Help and Support</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="check_for_update">Check for Update</string>
    <string name="logout">Logout</string>
    <string name="todo_accout">TODO</string>


    <string name="resep_be_sisit_ayam_khas_bali">Resep Be Sisit Ayam Khas Bali</string>
    <string name="resep_rujak_mie_khas_palembang">Resep Rujak Mie Khas Palembang</string>
    <string name="resep_masakan_udang_tahu_dengan_bumbu_tauco">Resep Masakan Udang Tahu dengan Bumbu Tauco</string>
    <string name="resep_mie_sagu_khas_selat_panjang_nikmatnya_menggoda">Resep Mie Sagu Khas Selat Panjang, Nikmatnya Menggoda</string>
    <string name="liked_recipe">Liked Recipe</string>
    <string name="_40_min">40 min</string>
    <string name="easy">Easy</string>
    <string name="_41_min">40 min</string>
    <string name="easy2">Easy</string>
    <string name="_42_min">40 min</string>
    <string name="easy3">Easy</string>
    <string name="_43_min">40 min</string>
    <string name="easy4">Easy</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Fernando Sanchez</string>
    <string name="email">Email</string>
    <string name="mail">Fernando Sanchez</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">123567890</string>
    <string name="bio">Bio</string>
    <string name="biography">Fernando Sanchez</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="buku_resep_spesial_antara">Buku resep spesial antara</string>
    <string name="keep_it_easy_with_these_simple_but_delicious_recipes">Keep it easy with these simple but delicious recipes.</string>
    <string name="_7_recipes">7 recipes</string>
    <string name="_1_3k_likes">1,3k Likes</string>
    <string name="todo16">TODO</string>
    <string name="todo15">TODO</string>
    <string name="buku_resep_spesial_antara2">Buku resep spesial antara</string>
    <string name="keep_it_easy_with_these_simple_but_delicious_recipes2">Keep it easy with these simple but delicious recipes.</string>
    <string name="_1_3k_likes2">1,3k Likes</string>
    <string name="_7_recipes2">7 recipes</string>
    <string name="todo14">TODO</string>
    <string name="todo17">TODO</string>
    <string name="buku_resep_spesial_antara3">Buku resep spesial antara</string>
    <string name="keep_it_easy_with_these_simple_but_delicious_recipes3">Keep it easy with these simple but delicious recipes.</string>
    <string name="_1_3k_likes3">1,3k Likes</string>
    <string name="_7_recipes3">7 recipes</string>
    <string name="todo187">TODO</string>
    <string name="todo18">TODO</string>
    <string name="cookbooks">Cookbooks</string>
    <string name="hi_nararaya">Hi Nararaya</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="todo19">TODO</string>
    <string name="drinks_category">Drinks</string>
    <string name="dot_home">.</string>
    <string name="num_130_home">130</string>
    <string name="num_103_reviews_home">103 reviews</string>
    <string name="orange_text_home">Show All Recipe by Community</string>
    <string name="category_title_home">Category</string>
    <string name="gayuh_tri_pinjungwati">Gayuh Tri Pinjungwati</string>
    <string name="resep_garang_asem_ayam_kampung">Resep Garang Asem Ayam Kampung</string>
    <string name="community_title_home">Featured Community Recipes</string>
    <string name="community_caption_home">Get lots of recipe inspiration from the community</string>
    <string name="resep_ayam_kuah_santan_pedas_lezat">Resep Ayam Kuah Santan Pedas Lezat</string>
    <string name="nadia_putri">Nadia Putri</string>
    <string name="resep_kare_ayam_kuah_pedas">Resep Kare Ayam Kuah Pedas</string>
    <string name="seasonal_category">Seasonal</string>
    <string name="cakes_category">Cakes</string>
    <string name="everyday_category">Everyday</string>
    >>>>>>> 986cf7ac1702eb54220e4f9f4984cca9a9fc4c3d
</resources>