<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    tools:context=".fragments.Receta1Fragment"
    style="@style/fragment_layout">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/fragment_container">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/fragment_cardview">

            <ImageView
                android:id="@+id/imageViewsand"
                android:src="@drawable/main"
                style="@style/fragment_image"
                tools:ignore="contentDescription" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="283dp"
        android:layout_height="247dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/fragment_box_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo15"
            android:src="@drawable/logo_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            style="@style/cookbook_title_recoleta"
            android:layout_width="251dp"
            android:layout_height="66dp"
            android:layout_marginTop="12dp"
            android:text="@string/buku_resep_spesial_antara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView18" />

        <TextView
            android:id="@+id/textView5"
            style="@style/content_description_cera"
            android:layout_width="251dp"
            android:layout_height="48dp"
            android:text="@string/keep_it_easy_with_these_simple_but_delicious_recipes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView6"
            style="@style/cookbook_rating_cera"
            android:layout_width="101dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:text="@string/_1_3k_likes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            style="@style/cookbook_rating_cera"
            android:layout_width="101dp"
            android:layout_height="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/_7_recipes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <View
            android:id="@+id/divider12"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>